
cmake_minimum_required(VERSION 3.20)
project(api_tests)

include(CTest)

if(BUILD_TESTING)
enable_testing()

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt5 REQUIRED COMPONENTS Core Test)
find_package(api QUIET COMPONENTS api_impl)

# append local binary directory for conan packages to be found
set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR} ${CMAKE_MODULE_PATH})
add_executable(test_api_testapi0 test_testapi0.cpp)
add_executable(test_api_testapi1 test_testapi1.cpp)
add_executable(test_api_testapi2 test_testapi2.cpp)
add_executable(test_api_testapi3 test_testapi3.cpp)
add_executable(test_api_testapi4 test_testapi4.cpp)
add_executable(test_api_testapi5 test_testapi5.cpp)
add_executable(test_api_testapi6 test_testapi6.cpp)
add_executable(test_api_testapi7 test_testapi7.cpp)
add_executable(test_api_testapi8 test_testapi8.cpp)
add_executable(test_api_testapi9 test_testapi9.cpp)
add_executable(test_api_testapi10 test_testapi10.cpp)
add_executable(test_api_testapi11 test_testapi11.cpp)
add_executable(test_api_testapi12 test_testapi12.cpp)
add_executable(test_api_testapi13 test_testapi13.cpp)
add_executable(test_api_testapi14 test_testapi14.cpp)
add_executable(test_api_testapi15 test_testapi15.cpp)
add_executable(test_api_testapi16 test_testapi16.cpp)
add_executable(test_api_testapi17 test_testapi17.cpp)
add_executable(test_api_testapi18 test_testapi18.cpp)
add_executable(test_api_testapi19 test_testapi19.cpp)
add_executable(test_api_testapi20 test_testapi20.cpp)
add_executable(test_api_testapi21 test_testapi21.cpp)
add_executable(test_api_testapi22 test_testapi22.cpp)
add_executable(test_api_testapi23 test_testapi23.cpp)
add_executable(test_api_testapi24 test_testapi24.cpp)
add_executable(test_api_testapi25 test_testapi25.cpp)
add_executable(test_api_testapi26 test_testapi26.cpp)
add_executable(test_api_testapi27 test_testapi27.cpp)
add_executable(test_api_testapi28 test_testapi28.cpp)
add_executable(test_api_testapi29 test_testapi29.cpp)
add_executable(test_api_testapi30 test_testapi30.cpp)
add_executable(test_api_testapi31 test_testapi31.cpp)
add_executable(test_api_testapi32 test_testapi32.cpp)
add_executable(test_api_testapi33 test_testapi33.cpp)
add_executable(test_api_testapi34 test_testapi34.cpp)
add_executable(test_api_testapi35 test_testapi35.cpp)
add_executable(test_api_testapi36 test_testapi36.cpp)
add_executable(test_api_testapi37 test_testapi37.cpp)
add_executable(test_api_testapi38 test_testapi38.cpp)
add_executable(test_api_testapi39 test_testapi39.cpp)
add_executable(test_api_testapi40 test_testapi40.cpp)
add_executable(test_api_testapi41 test_testapi41.cpp)
add_executable(test_api_testapi42 test_testapi42.cpp)
add_executable(test_api_testapi43 test_testapi43.cpp)
add_executable(test_api_testapi44 test_testapi44.cpp)
add_executable(test_api_testapi45 test_testapi45.cpp)
add_executable(test_api_testapi46 test_testapi46.cpp)
add_executable(test_api_testapi47 test_testapi47.cpp)
add_executable(test_api_testapi48 test_testapi48.cpp)
add_executable(test_api_testapi49 test_testapi49.cpp)
add_executable(test_api_testapi50 test_testapi50.cpp)
add_executable(test_api_testapi51 test_testapi51.cpp)
add_executable(test_api_testapi52 test_testapi52.cpp)
add_executable(test_api_testapi53 test_testapi53.cpp)
add_executable(test_api_testapi54 test_testapi54.cpp)
add_executable(test_api_testapi55 test_testapi55.cpp)
add_executable(test_api_testapi56 test_testapi56.cpp)
add_executable(test_api_testapi57 test_testapi57.cpp)
add_executable(test_api_testapi58 test_testapi58.cpp)
add_executable(test_api_testapi59 test_testapi59.cpp)
add_executable(test_api_testapi60 test_testapi60.cpp)
add_executable(test_api_testapi61 test_testapi61.cpp)
add_executable(test_api_testapi62 test_testapi62.cpp)
add_executable(test_api_testapi63 test_testapi63.cpp)
add_executable(test_api_testapi64 test_testapi64.cpp)
add_executable(test_api_testapi65 test_testapi65.cpp)
add_executable(test_api_testapi66 test_testapi66.cpp)
add_executable(test_api_testapi67 test_testapi67.cpp)
add_executable(test_api_testapi68 test_testapi68.cpp)
add_executable(test_api_testapi69 test_testapi69.cpp)
add_executable(test_api_testapi70 test_testapi70.cpp)
add_executable(test_api_testapi71 test_testapi71.cpp)
add_executable(test_api_testapi72 test_testapi72.cpp)
add_executable(test_api_testapi73 test_testapi73.cpp)
add_executable(test_api_testapi74 test_testapi74.cpp)
add_executable(test_api_testapi75 test_testapi75.cpp)
add_executable(test_api_testapi76 test_testapi76.cpp)
add_executable(test_api_testapi77 test_testapi77.cpp)
add_executable(test_api_testapi78 test_testapi78.cpp)
add_executable(test_api_testapi79 test_testapi79.cpp)
add_executable(test_api_testapi80 test_testapi80.cpp)
add_executable(test_api_testapi81 test_testapi81.cpp)
add_executable(test_api_testapi82 test_testapi82.cpp)
add_executable(test_api_testapi83 test_testapi83.cpp)
add_executable(test_api_testapi84 test_testapi84.cpp)
add_executable(test_api_testapi85 test_testapi85.cpp)
add_executable(test_api_testapi86 test_testapi86.cpp)
add_executable(test_api_testapi87 test_testapi87.cpp)
add_executable(test_api_testapi88 test_testapi88.cpp)
add_executable(test_api_testapi89 test_testapi89.cpp)
add_executable(test_api_testapi90 test_testapi90.cpp)
add_executable(test_api_testapi91 test_testapi91.cpp)
add_executable(test_api_testapi92 test_testapi92.cpp)
add_executable(test_api_testapi93 test_testapi93.cpp)
add_executable(test_api_testapi94 test_testapi94.cpp)
add_executable(test_api_testapi95 test_testapi95.cpp)
add_executable(test_api_testapi96 test_testapi96.cpp)
add_executable(test_api_testapi97 test_testapi97.cpp)
add_executable(test_api_testapi98 test_testapi98.cpp)
add_executable(test_api_testapi99 test_testapi99.cpp)
target_link_libraries(test_api_testapi0 api_impl Qt5::Test)
target_link_libraries(test_api_testapi1 api_impl Qt5::Test)
target_link_libraries(test_api_testapi2 api_impl Qt5::Test)
target_link_libraries(test_api_testapi3 api_impl Qt5::Test)
target_link_libraries(test_api_testapi4 api_impl Qt5::Test)
target_link_libraries(test_api_testapi5 api_impl Qt5::Test)
target_link_libraries(test_api_testapi6 api_impl Qt5::Test)
target_link_libraries(test_api_testapi7 api_impl Qt5::Test)
target_link_libraries(test_api_testapi8 api_impl Qt5::Test)
target_link_libraries(test_api_testapi9 api_impl Qt5::Test)
target_link_libraries(test_api_testapi10 api_impl Qt5::Test)
target_link_libraries(test_api_testapi11 api_impl Qt5::Test)
target_link_libraries(test_api_testapi12 api_impl Qt5::Test)
target_link_libraries(test_api_testapi13 api_impl Qt5::Test)
target_link_libraries(test_api_testapi14 api_impl Qt5::Test)
target_link_libraries(test_api_testapi15 api_impl Qt5::Test)
target_link_libraries(test_api_testapi16 api_impl Qt5::Test)
target_link_libraries(test_api_testapi17 api_impl Qt5::Test)
target_link_libraries(test_api_testapi18 api_impl Qt5::Test)
target_link_libraries(test_api_testapi19 api_impl Qt5::Test)
target_link_libraries(test_api_testapi20 api_impl Qt5::Test)
target_link_libraries(test_api_testapi21 api_impl Qt5::Test)
target_link_libraries(test_api_testapi22 api_impl Qt5::Test)
target_link_libraries(test_api_testapi23 api_impl Qt5::Test)
target_link_libraries(test_api_testapi24 api_impl Qt5::Test)
target_link_libraries(test_api_testapi25 api_impl Qt5::Test)
target_link_libraries(test_api_testapi26 api_impl Qt5::Test)
target_link_libraries(test_api_testapi27 api_impl Qt5::Test)
target_link_libraries(test_api_testapi28 api_impl Qt5::Test)
target_link_libraries(test_api_testapi29 api_impl Qt5::Test)
target_link_libraries(test_api_testapi30 api_impl Qt5::Test)
target_link_libraries(test_api_testapi31 api_impl Qt5::Test)
target_link_libraries(test_api_testapi32 api_impl Qt5::Test)
target_link_libraries(test_api_testapi33 api_impl Qt5::Test)
target_link_libraries(test_api_testapi34 api_impl Qt5::Test)
target_link_libraries(test_api_testapi35 api_impl Qt5::Test)
target_link_libraries(test_api_testapi36 api_impl Qt5::Test)
target_link_libraries(test_api_testapi37 api_impl Qt5::Test)
target_link_libraries(test_api_testapi38 api_impl Qt5::Test)
target_link_libraries(test_api_testapi39 api_impl Qt5::Test)
target_link_libraries(test_api_testapi40 api_impl Qt5::Test)
target_link_libraries(test_api_testapi41 api_impl Qt5::Test)
target_link_libraries(test_api_testapi42 api_impl Qt5::Test)
target_link_libraries(test_api_testapi43 api_impl Qt5::Test)
target_link_libraries(test_api_testapi44 api_impl Qt5::Test)
target_link_libraries(test_api_testapi45 api_impl Qt5::Test)
target_link_libraries(test_api_testapi46 api_impl Qt5::Test)
target_link_libraries(test_api_testapi47 api_impl Qt5::Test)
target_link_libraries(test_api_testapi48 api_impl Qt5::Test)
target_link_libraries(test_api_testapi49 api_impl Qt5::Test)
target_link_libraries(test_api_testapi50 api_impl Qt5::Test)
target_link_libraries(test_api_testapi51 api_impl Qt5::Test)
target_link_libraries(test_api_testapi52 api_impl Qt5::Test)
target_link_libraries(test_api_testapi53 api_impl Qt5::Test)
target_link_libraries(test_api_testapi54 api_impl Qt5::Test)
target_link_libraries(test_api_testapi55 api_impl Qt5::Test)
target_link_libraries(test_api_testapi56 api_impl Qt5::Test)
target_link_libraries(test_api_testapi57 api_impl Qt5::Test)
target_link_libraries(test_api_testapi58 api_impl Qt5::Test)
target_link_libraries(test_api_testapi59 api_impl Qt5::Test)
target_link_libraries(test_api_testapi60 api_impl Qt5::Test)
target_link_libraries(test_api_testapi61 api_impl Qt5::Test)
target_link_libraries(test_api_testapi62 api_impl Qt5::Test)
target_link_libraries(test_api_testapi63 api_impl Qt5::Test)
target_link_libraries(test_api_testapi64 api_impl Qt5::Test)
target_link_libraries(test_api_testapi65 api_impl Qt5::Test)
target_link_libraries(test_api_testapi66 api_impl Qt5::Test)
target_link_libraries(test_api_testapi67 api_impl Qt5::Test)
target_link_libraries(test_api_testapi68 api_impl Qt5::Test)
target_link_libraries(test_api_testapi69 api_impl Qt5::Test)
target_link_libraries(test_api_testapi70 api_impl Qt5::Test)
target_link_libraries(test_api_testapi71 api_impl Qt5::Test)
target_link_libraries(test_api_testapi72 api_impl Qt5::Test)
target_link_libraries(test_api_testapi73 api_impl Qt5::Test)
target_link_libraries(test_api_testapi74 api_impl Qt5::Test)
target_link_libraries(test_api_testapi75 api_impl Qt5::Test)
target_link_libraries(test_api_testapi76 api_impl Qt5::Test)
target_link_libraries(test_api_testapi77 api_impl Qt5::Test)
target_link_libraries(test_api_testapi78 api_impl Qt5::Test)
target_link_libraries(test_api_testapi79 api_impl Qt5::Test)
target_link_libraries(test_api_testapi80 api_impl Qt5::Test)
target_link_libraries(test_api_testapi81 api_impl Qt5::Test)
target_link_libraries(test_api_testapi82 api_impl Qt5::Test)
target_link_libraries(test_api_testapi83 api_impl Qt5::Test)
target_link_libraries(test_api_testapi84 api_impl Qt5::Test)
target_link_libraries(test_api_testapi85 api_impl Qt5::Test)
target_link_libraries(test_api_testapi86 api_impl Qt5::Test)
target_link_libraries(test_api_testapi87 api_impl Qt5::Test)
target_link_libraries(test_api_testapi88 api_impl Qt5::Test)
target_link_libraries(test_api_testapi89 api_impl Qt5::Test)
target_link_libraries(test_api_testapi90 api_impl Qt5::Test)
target_link_libraries(test_api_testapi91 api_impl Qt5::Test)
target_link_libraries(test_api_testapi92 api_impl Qt5::Test)
target_link_libraries(test_api_testapi93 api_impl Qt5::Test)
target_link_libraries(test_api_testapi94 api_impl Qt5::Test)
target_link_libraries(test_api_testapi95 api_impl Qt5::Test)
target_link_libraries(test_api_testapi96 api_impl Qt5::Test)
target_link_libraries(test_api_testapi97 api_impl Qt5::Test)
target_link_libraries(test_api_testapi98 api_impl Qt5::Test)
target_link_libraries(test_api_testapi99 api_impl Qt5::Test)
add_test(NAME test_api_testapi0 COMMAND $<TARGET_FILE:test_api_testapi0>)
add_dependencies(check test_api_testapi0)
add_test(NAME test_api_testapi1 COMMAND $<TARGET_FILE:test_api_testapi1>)
add_dependencies(check test_api_testapi1)
add_test(NAME test_api_testapi2 COMMAND $<TARGET_FILE:test_api_testapi2>)
add_dependencies(check test_api_testapi2)
add_test(NAME test_api_testapi3 COMMAND $<TARGET_FILE:test_api_testapi3>)
add_dependencies(check test_api_testapi3)
add_test(NAME test_api_testapi4 COMMAND $<TARGET_FILE:test_api_testapi4>)
add_dependencies(check test_api_testapi4)
add_test(NAME test_api_testapi5 COMMAND $<TARGET_FILE:test_api_testapi5>)
add_dependencies(check test_api_testapi5)
add_test(NAME test_api_testapi6 COMMAND $<TARGET_FILE:test_api_testapi6>)
add_dependencies(check test_api_testapi6)
add_test(NAME test_api_testapi7 COMMAND $<TARGET_FILE:test_api_testapi7>)
add_dependencies(check test_api_testapi7)
add_test(NAME test_api_testapi8 COMMAND $<TARGET_FILE:test_api_testapi8>)
add_dependencies(check test_api_testapi8)
add_test(NAME test_api_testapi9 COMMAND $<TARGET_FILE:test_api_testapi9>)
add_dependencies(check test_api_testapi9)
add_test(NAME test_api_testapi10 COMMAND $<TARGET_FILE:test_api_testapi10>)
add_dependencies(check test_api_testapi10)
add_test(NAME test_api_testapi11 COMMAND $<TARGET_FILE:test_api_testapi11>)
add_dependencies(check test_api_testapi11)
add_test(NAME test_api_testapi12 COMMAND $<TARGET_FILE:test_api_testapi12>)
add_dependencies(check test_api_testapi12)
add_test(NAME test_api_testapi13 COMMAND $<TARGET_FILE:test_api_testapi13>)
add_dependencies(check test_api_testapi13)
add_test(NAME test_api_testapi14 COMMAND $<TARGET_FILE:test_api_testapi14>)
add_dependencies(check test_api_testapi14)
add_test(NAME test_api_testapi15 COMMAND $<TARGET_FILE:test_api_testapi15>)
add_dependencies(check test_api_testapi15)
add_test(NAME test_api_testapi16 COMMAND $<TARGET_FILE:test_api_testapi16>)
add_dependencies(check test_api_testapi16)
add_test(NAME test_api_testapi17 COMMAND $<TARGET_FILE:test_api_testapi17>)
add_dependencies(check test_api_testapi17)
add_test(NAME test_api_testapi18 COMMAND $<TARGET_FILE:test_api_testapi18>)
add_dependencies(check test_api_testapi18)
add_test(NAME test_api_testapi19 COMMAND $<TARGET_FILE:test_api_testapi19>)
add_dependencies(check test_api_testapi19)
add_test(NAME test_api_testapi20 COMMAND $<TARGET_FILE:test_api_testapi20>)
add_dependencies(check test_api_testapi20)
add_test(NAME test_api_testapi21 COMMAND $<TARGET_FILE:test_api_testapi21>)
add_dependencies(check test_api_testapi21)
add_test(NAME test_api_testapi22 COMMAND $<TARGET_FILE:test_api_testapi22>)
add_dependencies(check test_api_testapi22)
add_test(NAME test_api_testapi23 COMMAND $<TARGET_FILE:test_api_testapi23>)
add_dependencies(check test_api_testapi23)
add_test(NAME test_api_testapi24 COMMAND $<TARGET_FILE:test_api_testapi24>)
add_dependencies(check test_api_testapi24)
add_test(NAME test_api_testapi25 COMMAND $<TARGET_FILE:test_api_testapi25>)
add_dependencies(check test_api_testapi25)
add_test(NAME test_api_testapi26 COMMAND $<TARGET_FILE:test_api_testapi26>)
add_dependencies(check test_api_testapi26)
add_test(NAME test_api_testapi27 COMMAND $<TARGET_FILE:test_api_testapi27>)
add_dependencies(check test_api_testapi27)
add_test(NAME test_api_testapi28 COMMAND $<TARGET_FILE:test_api_testapi28>)
add_dependencies(check test_api_testapi28)
add_test(NAME test_api_testapi29 COMMAND $<TARGET_FILE:test_api_testapi29>)
add_dependencies(check test_api_testapi29)
add_test(NAME test_api_testapi30 COMMAND $<TARGET_FILE:test_api_testapi30>)
add_dependencies(check test_api_testapi30)
add_test(NAME test_api_testapi31 COMMAND $<TARGET_FILE:test_api_testapi31>)
add_dependencies(check test_api_testapi31)
add_test(NAME test_api_testapi32 COMMAND $<TARGET_FILE:test_api_testapi32>)
add_dependencies(check test_api_testapi32)
add_test(NAME test_api_testapi33 COMMAND $<TARGET_FILE:test_api_testapi33>)
add_dependencies(check test_api_testapi33)
add_test(NAME test_api_testapi34 COMMAND $<TARGET_FILE:test_api_testapi34>)
add_dependencies(check test_api_testapi34)
add_test(NAME test_api_testapi35 COMMAND $<TARGET_FILE:test_api_testapi35>)
add_dependencies(check test_api_testapi35)
add_test(NAME test_api_testapi36 COMMAND $<TARGET_FILE:test_api_testapi36>)
add_dependencies(check test_api_testapi36)
add_test(NAME test_api_testapi37 COMMAND $<TARGET_FILE:test_api_testapi37>)
add_dependencies(check test_api_testapi37)
add_test(NAME test_api_testapi38 COMMAND $<TARGET_FILE:test_api_testapi38>)
add_dependencies(check test_api_testapi38)
add_test(NAME test_api_testapi39 COMMAND $<TARGET_FILE:test_api_testapi39>)
add_dependencies(check test_api_testapi39)
add_test(NAME test_api_testapi40 COMMAND $<TARGET_FILE:test_api_testapi40>)
add_dependencies(check test_api_testapi40)
add_test(NAME test_api_testapi41 COMMAND $<TARGET_FILE:test_api_testapi41>)
add_dependencies(check test_api_testapi41)
add_test(NAME test_api_testapi42 COMMAND $<TARGET_FILE:test_api_testapi42>)
add_dependencies(check test_api_testapi42)
add_test(NAME test_api_testapi43 COMMAND $<TARGET_FILE:test_api_testapi43>)
add_dependencies(check test_api_testapi43)
add_test(NAME test_api_testapi44 COMMAND $<TARGET_FILE:test_api_testapi44>)
add_dependencies(check test_api_testapi44)
add_test(NAME test_api_testapi45 COMMAND $<TARGET_FILE:test_api_testapi45>)
add_dependencies(check test_api_testapi45)
add_test(NAME test_api_testapi46 COMMAND $<TARGET_FILE:test_api_testapi46>)
add_dependencies(check test_api_testapi46)
add_test(NAME test_api_testapi47 COMMAND $<TARGET_FILE:test_api_testapi47>)
add_dependencies(check test_api_testapi47)
add_test(NAME test_api_testapi48 COMMAND $<TARGET_FILE:test_api_testapi48>)
add_dependencies(check test_api_testapi48)
add_test(NAME test_api_testapi49 COMMAND $<TARGET_FILE:test_api_testapi49>)
add_dependencies(check test_api_testapi49)
add_test(NAME test_api_testapi50 COMMAND $<TARGET_FILE:test_api_testapi50>)
add_dependencies(check test_api_testapi50)
add_test(NAME test_api_testapi51 COMMAND $<TARGET_FILE:test_api_testapi51>)
add_dependencies(check test_api_testapi51)
add_test(NAME test_api_testapi52 COMMAND $<TARGET_FILE:test_api_testapi52>)
add_dependencies(check test_api_testapi52)
add_test(NAME test_api_testapi53 COMMAND $<TARGET_FILE:test_api_testapi53>)
add_dependencies(check test_api_testapi53)
add_test(NAME test_api_testapi54 COMMAND $<TARGET_FILE:test_api_testapi54>)
add_dependencies(check test_api_testapi54)
add_test(NAME test_api_testapi55 COMMAND $<TARGET_FILE:test_api_testapi55>)
add_dependencies(check test_api_testapi55)
add_test(NAME test_api_testapi56 COMMAND $<TARGET_FILE:test_api_testapi56>)
add_dependencies(check test_api_testapi56)
add_test(NAME test_api_testapi57 COMMAND $<TARGET_FILE:test_api_testapi57>)
add_dependencies(check test_api_testapi57)
add_test(NAME test_api_testapi58 COMMAND $<TARGET_FILE:test_api_testapi58>)
add_dependencies(check test_api_testapi58)
add_test(NAME test_api_testapi59 COMMAND $<TARGET_FILE:test_api_testapi59>)
add_dependencies(check test_api_testapi59)
add_test(NAME test_api_testapi60 COMMAND $<TARGET_FILE:test_api_testapi60>)
add_dependencies(check test_api_testapi60)
add_test(NAME test_api_testapi61 COMMAND $<TARGET_FILE:test_api_testapi61>)
add_dependencies(check test_api_testapi61)
add_test(NAME test_api_testapi62 COMMAND $<TARGET_FILE:test_api_testapi62>)
add_dependencies(check test_api_testapi62)
add_test(NAME test_api_testapi63 COMMAND $<TARGET_FILE:test_api_testapi63>)
add_dependencies(check test_api_testapi63)
add_test(NAME test_api_testapi64 COMMAND $<TARGET_FILE:test_api_testapi64>)
add_dependencies(check test_api_testapi64)
add_test(NAME test_api_testapi65 COMMAND $<TARGET_FILE:test_api_testapi65>)
add_dependencies(check test_api_testapi65)
add_test(NAME test_api_testapi66 COMMAND $<TARGET_FILE:test_api_testapi66>)
add_dependencies(check test_api_testapi66)
add_test(NAME test_api_testapi67 COMMAND $<TARGET_FILE:test_api_testapi67>)
add_dependencies(check test_api_testapi67)
add_test(NAME test_api_testapi68 COMMAND $<TARGET_FILE:test_api_testapi68>)
add_dependencies(check test_api_testapi68)
add_test(NAME test_api_testapi69 COMMAND $<TARGET_FILE:test_api_testapi69>)
add_dependencies(check test_api_testapi69)
add_test(NAME test_api_testapi70 COMMAND $<TARGET_FILE:test_api_testapi70>)
add_dependencies(check test_api_testapi70)
add_test(NAME test_api_testapi71 COMMAND $<TARGET_FILE:test_api_testapi71>)
add_dependencies(check test_api_testapi71)
add_test(NAME test_api_testapi72 COMMAND $<TARGET_FILE:test_api_testapi72>)
add_dependencies(check test_api_testapi72)
add_test(NAME test_api_testapi73 COMMAND $<TARGET_FILE:test_api_testapi73>)
add_dependencies(check test_api_testapi73)
add_test(NAME test_api_testapi74 COMMAND $<TARGET_FILE:test_api_testapi74>)
add_dependencies(check test_api_testapi74)
add_test(NAME test_api_testapi75 COMMAND $<TARGET_FILE:test_api_testapi75>)
add_dependencies(check test_api_testapi75)
add_test(NAME test_api_testapi76 COMMAND $<TARGET_FILE:test_api_testapi76>)
add_dependencies(check test_api_testapi76)
add_test(NAME test_api_testapi77 COMMAND $<TARGET_FILE:test_api_testapi77>)
add_dependencies(check test_api_testapi77)
add_test(NAME test_api_testapi78 COMMAND $<TARGET_FILE:test_api_testapi78>)
add_dependencies(check test_api_testapi78)
add_test(NAME test_api_testapi79 COMMAND $<TARGET_FILE:test_api_testapi79>)
add_dependencies(check test_api_testapi79)
add_test(NAME test_api_testapi80 COMMAND $<TARGET_FILE:test_api_testapi80>)
add_dependencies(check test_api_testapi80)
add_test(NAME test_api_testapi81 COMMAND $<TARGET_FILE:test_api_testapi81>)
add_dependencies(check test_api_testapi81)
add_test(NAME test_api_testapi82 COMMAND $<TARGET_FILE:test_api_testapi82>)
add_dependencies(check test_api_testapi82)
add_test(NAME test_api_testapi83 COMMAND $<TARGET_FILE:test_api_testapi83>)
add_dependencies(check test_api_testapi83)
add_test(NAME test_api_testapi84 COMMAND $<TARGET_FILE:test_api_testapi84>)
add_dependencies(check test_api_testapi84)
add_test(NAME test_api_testapi85 COMMAND $<TARGET_FILE:test_api_testapi85>)
add_dependencies(check test_api_testapi85)
add_test(NAME test_api_testapi86 COMMAND $<TARGET_FILE:test_api_testapi86>)
add_dependencies(check test_api_testapi86)
add_test(NAME test_api_testapi87 COMMAND $<TARGET_FILE:test_api_testapi87>)
add_dependencies(check test_api_testapi87)
add_test(NAME test_api_testapi88 COMMAND $<TARGET_FILE:test_api_testapi88>)
add_dependencies(check test_api_testapi88)
add_test(NAME test_api_testapi89 COMMAND $<TARGET_FILE:test_api_testapi89>)
add_dependencies(check test_api_testapi89)
add_test(NAME test_api_testapi90 COMMAND $<TARGET_FILE:test_api_testapi90>)
add_dependencies(check test_api_testapi90)
add_test(NAME test_api_testapi91 COMMAND $<TARGET_FILE:test_api_testapi91>)
add_dependencies(check test_api_testapi91)
add_test(NAME test_api_testapi92 COMMAND $<TARGET_FILE:test_api_testapi92>)
add_dependencies(check test_api_testapi92)
add_test(NAME test_api_testapi93 COMMAND $<TARGET_FILE:test_api_testapi93>)
add_dependencies(check test_api_testapi93)
add_test(NAME test_api_testapi94 COMMAND $<TARGET_FILE:test_api_testapi94>)
add_dependencies(check test_api_testapi94)
add_test(NAME test_api_testapi95 COMMAND $<TARGET_FILE:test_api_testapi95>)
add_dependencies(check test_api_testapi95)
add_test(NAME test_api_testapi96 COMMAND $<TARGET_FILE:test_api_testapi96>)
add_dependencies(check test_api_testapi96)
add_test(NAME test_api_testapi97 COMMAND $<TARGET_FILE:test_api_testapi97>)
add_dependencies(check test_api_testapi97)
add_test(NAME test_api_testapi98 COMMAND $<TARGET_FILE:test_api_testapi98>)
add_dependencies(check test_api_testapi98)
add_test(NAME test_api_testapi99 COMMAND $<TARGET_FILE:test_api_testapi99>)
add_dependencies(check test_api_testapi99)

endif() # BUILD_TESTING
